# rust-simple-event-driven-microservices

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pre_run.sh
.github/workflows/: main-ci.yml
.scripts/: install_prerequisites_macos.sh
catalog_service/: Cargo.toml
catalog_service/src/: main.rs
catalog_service/src/api/: mod.rs
catalog_service/src/db/: catalog_db.rs  mod.rs
catalog_service/src/services/: catalog_service.rs  mod.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/constants/: global_constants.rs  mod.rs
common/src/traits/: listener_service.rs  mod.rs
common/src/utilities/: logger.rs
event_bus/: Cargo.toml
event_bus/src/: event.rs  lib.rs  topic.rs
event_bus/src/events/: mod.rs  order_placed_event.rs
event_bus/src/utilities/: listeners.rs  mod.rs
networking/: Cargo.toml
networking/src/: lib.rs
order_service/: Cargo.toml
order_service/src/: main.rs
order_service/src/api/: mod.rs
order_service/src/db/: mod.rs  order_db.rs
order_service/src/model/: mod.rs
order_service/src/networking/: catalog_network_service.rs  mod.rs
order_service/src/services/: order_service.rs
