[package]
name = "order_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
tokio = "1.34.0"
log = "0.4.20"
async-trait = "0.1.74"
serde = { version = "1.0.193", features = ["derive"] }
mockall = "0.12.0"

# local
common = { path = "../common" }
event_bus = { path = "../event_bus" }
networking = { path = "../networking" }
